WIP, missing consistent logic for swapping between the two settings